# src/app/Http/Controllers/Api/User/UserApiController.php
@@ -2,12 +2,13 @@
 
 namespace App\Http\Controllers\Api\User;
 
-use App\Http\Requests\Api\User\UserRegisterValidation;
-use App\Models\Basic\User;
-use App\Services\User\UserService;
 use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
+use App\Services\User\UserService;
 use App\Http\Controllers\Api\BaseApiController;
+use App\Http\Requests\Api\User\UserLoginValidation;
+use App\Http\Requests\Api\User\UserRegisterValidation;
+use App\Exceptions\User\UserPreviousPinNotExpiredYetException;
 
 class UserApiController extends BaseApiController
 {
@@ -31,7 +32,7 @@ class UserApiController extends BaseApiController
      * @OA\post (
      *  path="/api/user/register",
      *  summary="Registers new user",
-     *  description="Registers new user",
+     *  description="Registers new user, a 7 digit pin code will be sent to user's mobile, which will be expired in 2 minutes",
      *  tags={"User"},
      *  @OA\RequestBody(
      *      required=true,
@@ -60,33 +61,54 @@ class UserApiController extends BaseApiController
      */
     public function register(UserRegisterValidation $userRegisterValidation): JsonResponse
     {
-        $data = $this->sanitizeRequestPinData();
+        $data = $this->userService->sanitizeRegisterRequestData($this->request);
 
         $this->userService->register($data);
 
-        return $this->returnOk($this->getPinRequestSuccessMessage($data['mobile']));
+        return $this->returnOk($this->userService->getPinRequestSuccessMessage($data['mobile']));
     }
 
     /**
-     * @return array
+     * @OA\post (
+     *  path="/api/user/login",
+     *  summary="Login request for a user",
+     *  description="Login request for a user, a 7 digit pin code will be sent to user's mobile, which will be expired in 2 minutes",
+     *  tags={"User"},
+     *  @OA\RequestBody(
+     *      required=true,
+     *      description="Registers new user",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="mobile", type="string",example="09123456789", nullable="false"),
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="success",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="sucess", type="string", example="success"),
+     *      )
+     *  ),
+     *  @OA\Response(
+     *      response=422,
+     *      description="bad request",
+     *  ),
+     *  @OA\Response(
+     *      response=500,
+     *      description="bad request",
+     *  ),
+     * ),
+     *
+     * @param UserLoginValidation $userRegisterValidation
+     * @return JsonResponse
+     * @throws UserPreviousPinNotExpiredYetException
      */
-    private function sanitizeRequestPinData(): array
+    public function login(UserLoginValidation $userRegisterValidation): JsonResponse
     {
-        return [
-            User::COLUMN_FIRST_NAME => $this->request->post('first_name'),
-            User::COLUMN_LAST_NAME => $this->request->post('last_name'),
-            User::COLUMN_MOBILE => $this->request->post('mobile'),
-        ];
-    }
+        $data = $this->userService->sanitizeLoginRequestData($this->request);
 
-    /**
-     * @param $mobile
-     * @return string
-     */
-    private function getPinRequestSuccessMessage($mobile): string
-    {
-        return __('basic/user.registerSuccess', ['mobile' => $mobile]);
-    }
+        $this->userService->login($data);
 
+        return $this->returnOk($this->userService->getPinRequestSuccessMessage($data['mobile']));
+    }
 
 }
